--- a/purple-pill/templates/masters.html
+++ b/purple-pill/templates/masters.html
@@ -11,7 +11,7 @@
     </div>
 </localmenu>
 
-<div class="panel-border panel-border-with-menu" ng-class="{'inactive-master': data.view.viewState != 0}">
+<div class="panel-border panel-border-with-menu">
     <div id="masters-list">
         <ul>
             <li ng-repeat="sequence in data.sequences">
@@ -22,7 +22,7 @@
                                 <circle cx="6" cy="6" r="6" class="diamond">
                             </svg> 
                         </span>
-                        <span class="list-view-col ag" mastername="{{master.name}}" masterag="{{master.ag}}" ng-model="master.ag" ng-click="toggleDisplay(master)" ng-class="{'selected': master.display}"></span>
+                        <span class="list-view-col ag" type="master" mastername="{{master.name}}" masterag="{{master.ag}}" ng-model="master.ag" ng-click="toggleDisplay(master)" ng-class="{'selected': master.display}"></span>
                         <span class="list-edit-col rename" ng-model="master.displayName" ng-class="{'selected': master.edit}"></span>
                     </li>
                 </ul>
