#341 GD: rubberbanding svg color repaired

--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -801,9 +801,17 @@
                 background: #888!important;
             }
             
+                .temp-view-selection-true svg {
+                    fill: #fff;
+                }
+            
             .temp-view-selection-false {
                 background: transparent!important;
             }
+            
+                .temp-view-selection-false svg {
+                    fill: #000!important;
+                }
         
             .list-view-col svg {
                 height: 60%;
