--- a/purple-pill/templates/designspace.html
+++ b/purple-pill/templates/designspace.html
@@ -28,10 +28,10 @@
     
     <div class="" ng-show="data.currentDesignSpace.type != 'x'">
         <control ng-if="data.currentDesignSpace.type == 'Control'">
-            <div class="slider-input-container" ng-repeat="axis in data.currentInstance.axes" ng-style="{'top': ($index * 40 + 40) + 'px', 'left': (designSpaceWidth / 2 - 75) + 'px'}">
+            <div class="slider-input-container" ng-repeat="axis in data.currentInstance.axes" ng-style="{'top': ($index * 50 + 40) + 'px', 'left': (designSpaceWidth / 2 - 75) + 'px'}">
                 <input counter="{{$index}}" ng-model="axis.value" ng-blur="redrawAxesFromInput($index, 'blur')" ng-keyup="redrawAxesFromInput($index, $event)" class="slider-input-output">
             </div>
-            <select class="left-label-select" ng-change="changeMainMaster()" ng-model="data.currentDesignSpace.mainMaster" ng-options="data.currentDesignSpace.axes.indexOf(axis) as data.findMaster(axis.masterName).displayName for (index, axis) in data.currentDesignSpace.axes" ng-style="{'top': (data.currentDesignSpace.mainMaster * 40 + 40) + 'px', 'left': '10px'}" ng-if="data.currentDesignSpace.axes.length > 2"></select>
+            <select class="left-label-select" ng-change="changeMainMaster()" ng-model="data.currentDesignSpace.mainMaster" ng-options="data.currentDesignSpace.axes.indexOf(axis) as data.findMaster(axis.masterName).displayName for (index, axis) in data.currentDesignSpace.axes" ng-style="{'top': (data.currentDesignSpace.mainMaster * 50 + 40) + 'px', 'left': '10px'}"></select>
         </control>
         <explore ng-if="data.currentDesignSpace.type == 'Explore'"></explore>
     </div> 
