#371 "remove buttons (X) close, and on the right, of the slider labels"

--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -661,7 +661,7 @@
             .slider-button.slider-remove-master {
                 fill: #f00;
             }
-        
+
             .slider-label-right-container:hover .slider-button {
                 opacity: 1;
             }
@@ -675,6 +675,7 @@
         
         .slider-hover-square {
             opacity: 0;
+            fill: white;
         }
         
         
