--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -347,6 +347,10 @@
             float: left;
         }
         
+        #specimen-content ul li.dimmed {
+            opacity: 0.2;
+        }
+        
             #specimen-content li glyph {
                 border-bottom: 4px solid transparent;
             }
