#406 toLowercase out of filter

--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -352,6 +352,7 @@
         }
         
             #specimen-content li glyph {
+                display: inline-block;
                 border-bottom: 4px solid transparent;
             }
                   
