--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -211,11 +211,19 @@
 			
             underconstruction {
                 display: block;
-                background: #48A115!important;
-                color: #99D676;
-                padding: 16px;
                 height: 100%;
+                background-image: url('../img/tile.png');
+                background-repeat: repeat;
+                position: relative;
             }
+            
+                underconstruction .bottom-text {
+                    position: absolute;
+                    bottom: 0;
+                    left: 0;
+                    padding: 16px;
+                    color: #515151;
+                }
             
             specimen, specimen2, masters, designspace, instances, parameters, fontexport {
                 display: block;
@@ -1344,25 +1352,20 @@
         position: absolute;
         top: 0;
         z-index: 100;
-        height: 4px;
+        height: 10px;
         width: 100%;
         background: transparent;
         cursor: ns-resize;
         padding: 0 30px;
-        border-top: 1px solid transparent;
     }
     
     dividerHor:after {
         position: absolute;
-        top: -4px;
+        top: -10px;
         left: 0;
         content: " ";
-        height: 3px;
+        height: 10px;
         width: 100%;
         background: transparent;
     }
-    
-        dividerHor:hover {
-            background: transparent;
-            border-top: 1px solid transparent;
-        }
+
