--- a/purple-pill/templates/parameters.html
+++ b/purple-pill/templates/parameters.html
@@ -1,4 +1,4 @@
-<div class="panel-border">
+<div class="panel-border panel-border-without-menu">
     <div id="parameters-selection">
         <div id="parameters-of-master" ng-if="areMastersSelected()">
             <div class="parameters-selection-head">Master</div><div class="parameters-add" ng-click="parametersWindow($event, 1, 'master')">+</div>
