--- a/purple-pill/templates/specimen.html
+++ b/purple-pill/templates/specimen.html
@@ -1,4 +1,4 @@
-<div class="panel-border">
+<div class="panel-border panel-border-without-menu">
     <div id="specimen-toolbar">
         <select ng-model="selectedSpecimen" ng-options="specim.name for specim in specimen" class="specimen-tool"></select>
         <div id="standard-view-tools" >
