--- a/purple-pill/templates/designspace.html
+++ b/purple-pill/templates/designspace.html
@@ -14,7 +14,7 @@
         <div class="rename" ng-model="space.name" ng-if="space != data.currentDesignspace"></div>
         
     </li>
-    <li ng-click="addDesignspace()" ng-if="data.designspaces.length < 8">
+    <li class="add-designspace" ng-click="addDesignspace()" ng-if="data.designspaces.length < 8">
         +
     </li>
 </ul>
